# flockjay_ai_agents

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
app/: __init__.py  auth.py  constants.py  main.py  settings.py
app/agent/: instructions.py  mcp_toolset.py  reflect_retry.py  root_agent.py
app/attachments/: embedder.py  extractors.py  ingest.py  registry.py  summarizer.py  tools.py
app/chat/: router.py  schemas.py  service.py
app/runtime/: runner.py
