[tool.poetry]
name = "flockjay-agents"
version = "0.1.0"
description = "Agentic chat backend for Flockjay — single /chat endpoint on top of the Flockjay MCP server."
authors = ["Gagan Puri <gaganpuri2055@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "." }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.1"
uvicorn = { extras = ["standard"], version = ">=0.35,<1.0" }
pydantic = "^2.13.0"
pydantic-settings = "^2.10.1"
google-adk = "1.29.0"
google-genai = "^1.73.1"
chromadb = ">=0.5.5,<0.5.20"  # pinned for opentelemetry <1.39 compat with google-adk 1.29.0
tiktoken = "^0.9.0"
pymupdf = "^1.25.5"
httpx = "^0.28.1"
opik = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
